--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	</parent>
 	<properties>
 		<!-- optional dependencies -->
-		<jetty-version>9.2.22.v20170606</jetty-version>
+		<jetty-version>9.4.56.v20240826</jetty-version>
 		<gson-version>2.8.5</gson-version>
 		<!-- external test package versions -->
 		<easymock-version>3.6</easymock-version>
@@ -208,6 +208,11 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
+			<version>${jetty-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-security</artifactId>
 			<version>${jetty-version}</version>
 		</dependency>
 		<dependency>
