--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.j256.simple-schema-reg</groupId>
 	<artifactId>simple-schema-reg</artifactId>
-	<version>0.2</version>
+	<version>0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Simple Logging</name>
 	<url>https://github.com/j256/simple-schema-reg/</url>
